# YuMi_Pick_and_Place

./: README.md
saved_plan/: traj1_20250213_154636.pkl  traj1_r20250213_164100.pkl  traj2_20250213_155729.pkl  traj2_r20250213_164100.pkl
saved_plan_chomp/: tempi_chomp.txt  traj1_20250218_112705.pkl  traj1_r20250218_112432.pkl  traj2_20250218_112432.pkl  traj2_20250218_112705.pkl  traj2_r20250218_112432.pkl
saved_plan_ompl_FMT/: tempi_fmt.txt  traj1_20250218_111555.pkl  traj1_r20250218_111555.pkl  traj2_20250218_111555.pkl  traj2_r20250218_111555.pkl
saved_plan_ompl_RRT/: tempi_rrt.txt  traj1_20250218_105402.pkl  traj1_20250218_105944.pkl  traj1_20250218_110435.pkl  traj1_r20250218_105402.pkl  traj1_r20250218_105944.pkl  traj1_r20250218_110435.pkl  traj2_20250218_105402.pkl  traj2_20250218_105944.pkl  traj2_20250218_110435.pkl  traj2_r20250218_105402.pkl  traj2_r20250218_105944.pkl  traj2_r20250218_110435.pkl
yumi_description/: package.xml
yumi_description/meshes/fuller/: Camera_intel_realsense_D435.stl  Printer_ASM_EPSON.stl  Rack.stl  Table_M230382.stl  Table_M230384.stl  table_with_printer.stl  yumiFingerV4.stl
yumi_description/urdf/: yumi.urdf
yumi_mg_py/: CMakeLists.txt  package.xml
yumi_mg_py/launch/: yumi_mg_py.launch
yumi_mg_py/scripts/: yumi_traj_py.py
yumi_moveit_config/: .setup_assistant  package.xml
yumi_moveit_config/config/: fake_controllers.yaml  gazebo_yumi.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  yumi.srdf
yumi_moveit_config/default_warehouse_mongo_db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-16-588788997887366646.wt  collection-2-588788997887366646.wt  collection-24-588788997887366646.wt  collection-27-588788997887366646.wt  collection-30-588788997887366646.wt  collection-33-588788997887366646.wt  collection-44-588788997887366646.wt  index-17-588788997887366646.wt  index-25-588788997887366646.wt  index-26-588788997887366646.wt  index-28-588788997887366646.wt  index-29-588788997887366646.wt  index-3-588788997887366646.wt  index-31-588788997887366646.wt  index-32-588788997887366646.wt  index-34-588788997887366646.wt  index-45-588788997887366646.wt  sizeStorer.wt
yumi_moveit_config/default_warehouse_mongo_db/diagnostic.data/: metrics.2024-07-23T11-28-33Z-00000  metrics.2024-07-23T12-21-41Z-00000  metrics.2024-07-23T12-23-50Z-00000  metrics.2024-07-23T12-25-05Z-00000  metrics.2024-07-23T12-29-20Z-00000  metrics.2024-07-23T12-30-17Z-00000  metrics.2024-07-23T12-30-50Z-00000  metrics.2024-07-23T12-32-28Z-00000  metrics.2024-07-23T12-39-09Z-00000  metrics.2024-07-23T14-41-32Z-00000  metrics.2024-07-23T14-49-02Z-00000  metrics.2024-07-23T15-00-07Z-00000  metrics.2024-07-23T15-03-08Z-00000  metrics.2024-07-23T15-26-48Z-00000  metrics.2024-07-23T15-27-53Z-00000  metrics.2024-07-23T15-31-56Z-00000  metrics.2024-07-23T15-40-17Z-00000  metrics.2024-07-23T15-49-03Z-00000  metrics.2024-07-23T15-52-16Z-00000  metrics.2024-07-23T15-57-49Z-00000  metrics.2024-07-23T16-00-30Z-00000  metrics.2024-07-23T17-18-23Z-00000  metrics.2024-07-23T17-26-34Z-00000  metrics.2024-07-23T17-30-49Z-00000  metrics.2024-07-23T17-44-28Z-00000  (+146 more)
yumi_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  moveit.rviz  ros_controllers.launch
yumi_scene/: CMakeLists.txt  package.xml
yumi_scene/launch/: yumi_scene.launch
yumi_scene/scripts/: yumi_scene.py
