<?xml version="1.0"?>
<package format="2">
  <name>yumi_scene</name>
  <version>0.0.0</version>
  <description>The yumi_scene package</description>

  <maintainer email="l.georgantellos1@studenti.poliba.it">Lorenzo Georgantellos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
